--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -25,6 +25,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8QM) += fsl-imx8qm-lpddr4-arm2.dtb \
 				 fsl-imx8qm-mek-rpmsg.dtb \
 				 fsl-imx8qm-mek-dsp.dtb \
 				 fsl-imx8qm-mek-ov5640.dtb \
+				 fsl-imx8qm-mek-a53.dtb \
+				 fsl-imx8qm-mek-a72.dtb \
 				 fsl-imx8qm-mek_ca53.dtb \
 				 fsl-imx8qm-mek_ca72.dtb \
 				 fsl-imx8qm-mek-hdmi.dtb \
