--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek-a53.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek-a53.dtsi
@@ -12,7 +12,7 @@
  * GNU General Public License for more details.
  */
 
-#include "fsl-imx8qm.dtsi"
+#include "fsl-imx8qm-a53.dtsi"
 
 / {
 	model = "Freescale i.MX8QM MEK";
@@ -54,6 +54,7 @@
 			regulator-max-microvolt = <3300000>;
 			gpio = <&pca6416 3 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
+			status = "disabled";
 		};
 
 		reg_can2_en: regulator-can2-gen {
@@ -63,6 +64,7 @@
 			regulator-max-microvolt = <3300000>;
 			gpio = <&pca6416 4 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
+			status = "disabled";
 		};
 
 		reg_can01_stby: regulator-can01-stby {
@@ -73,6 +75,7 @@
 			gpio = <&pca6416 5 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 			vin-supply = <&reg_can01_en>;
+			status = "disabled";
 		};
 
 		reg_can2_stby: regulator-can2-stby {
@@ -83,6 +86,7 @@
 			gpio = <&pca6416 6 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 			vin-supply = <&reg_can2_en>;
+			status = "disabled";
 		};
 
 		reg_fec2_supply: fec2_nvcc {
@@ -92,6 +96,7 @@
 			regulator-max-microvolt = <1800000>;
 			gpio = <&max7322 0 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
+			status = "disabled";
 		};
 
 		epdev_on: fixedregulator@100 {
@@ -166,6 +171,7 @@
 			"Playback", "CPU-Playback",
 			"ASRC-Capture", "CPU-Capture",
 			"CPU-Capture", "Capture";
+		status = "disabled";
 	};
 
 	sound-cs42888 {
@@ -175,7 +181,7 @@
 		esai-controller = <&esai0>;
 		audio-codec = <&cs42888>;
 		asrc-controller = <&asrc0>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	sound-amix-sai {
@@ -183,6 +189,7 @@
 		model = "amix-audio-sai";
 		dais = <&sai6>, <&sai7>;
 		amix-controller = <&amix>;
+		status = "disabled";
 	};
 
 	lvds_backlight0: lvds_backlight@0 {
@@ -219,6 +226,7 @@
 				     90 91 92 93 94 95 96 97 98 99
 				    100>;
 		default-brightness-level = <80>;
+		status = "disabled";
 	};
 };
 
@@ -227,7 +235,7 @@
 };
 
 &amix {
-	status = "okay";
+	status = "disabled";
 };
 
 &sai6 {
@@ -240,7 +248,7 @@
 	assigned-clock-rates = <0>, <786432000>, <98304000>, <12288000>, <98304000>;
 	fsl,sai-asynchronous;
 	fsl,txm-rxs;
-	status = "okay";
+	status = "disabled";
 };
 
 &sai7 {
@@ -253,7 +261,7 @@
 	assigned-clock-rates = <0>, <786432000>, <98304000>, <12288000>, <98304000>;
 	fsl,sai-asynchronous;
 	fsl,txm-rxs;
-	status = "okay";
+	status = "disabled";
 };
 
 &iomuxc {
@@ -263,9 +271,7 @@
 	imx8qm-mek {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
-				SC_P_MCLK_OUT0_AUD_ACM_MCLK_OUT0	0x0600004c
 				SC_P_QSPI1A_DATA1_LSIO_GPIO4_IO25	0x0600004c
-				SC_P_SCU_GPIO0_03_LSIO_GPIO0_IO31	0x0600004c
 			>;
 		};
 
@@ -681,7 +687,7 @@
 
 &asrc0 {
 	fsl,asrc-rate  = <48000>;
-	status = "okay";
+	status = "disabled";
 };
 
 &esai0 {
@@ -696,7 +702,7 @@
 	assigned-clock-parents = <&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_CLK>;
 	assigned-clock-rates = <0>, <786432000>, <49152000>, <12288000>, <49152000>;
 	fsl,txm-rxs;
-	status = "okay";
+	status = "disabled";
 };
 
 &emvsim0 {
@@ -713,7 +719,7 @@
 	assigned-clock-rates = <786432000>, <49152000>, <12288000>, <49152000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sai1>;
-	status = "okay";
+	status = "disabled";
 };
 
 &usbotg1 {
@@ -724,7 +730,7 @@
 	adp-disable;
 	power-polarity-active-high;
 	disable-over-current;
-	status = "okay";
+	status = "disabled";
 };
 
 &usbotg3 {
@@ -740,7 +746,8 @@
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>;
 	bus-width = <8>;
 	non-removable;
-	status = "okay";
+	/delete-property/ iommus;
+	status = "disabled";
 };
 
 &usdhc2 {
@@ -752,6 +759,7 @@
 	cd-gpios = <&gpio5 22 GPIO_ACTIVE_LOW>;
 	wp-gpios = <&gpio5 21 GPIO_ACTIVE_HIGH>;
 	vmmc-supply = <&reg_usdhc2_vmmc>;
+	/delete-property/ iommus;
 	status = "okay";
 };
 
@@ -762,6 +770,7 @@
 	phy-handle = <&ethphy0>;
 	fsl,magic-packet;
 	fsl,rgmii_rxc_dly;
+	/delete-property/ iommus;
 	status = "okay";
 
 	mdio {
@@ -803,21 +812,21 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can01_stby>;
-	status = "okay";
+	status = "disabled";
 };
 
 &flexcan2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can01_stby>;
-	status = "okay";
+	status = "disabled";
 };
 
 &flexcan3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan3>;
 	xceiver-supply = <&reg_can2_stby>;
-	status = "okay";
+	status = "disabled";
 };
 
 &i2c0 {
@@ -886,7 +895,7 @@
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
-	status = "okay";
+	status = "disabled";
 
 	wm8960: wm8960@1a {
 		compatible = "wlf,wm8960";
@@ -909,13 +918,14 @@
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_cm41_i2c0>;
-	status = "okay";
+	status = "disabled";
 
 	pca6416: gpio@20 {
 		compatible = "ti,tca6416";
 		reg = <0x20>;
 		gpio-controller;
 		#gpio-cells = <2>;
+		status = "disabled";
 	};
 
 	cs42888: cs42888@48 {
@@ -935,7 +945,7 @@
 				<&clk IMX8QM_AUD_MCLKOUT0>;
 		assigned-clock-rates = <786432000>, <49152000>, <12288000>, <12288000>;
 		fsl,txs-rxm;
-		status = "okay";
+		status = "disabled";
 	};
 };
 
@@ -947,7 +957,7 @@
 	phy-supply = <&reg_fec2_supply>;
 	fsl,magic-packet;
 	fsl,rgmii_rxc_dly;
-	status = "okay";
+	status = "disabled";
 };
 
 &pd_dma_lpuart0 {
@@ -964,7 +974,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpuart1>;
 	resets = <&modem_reset>;
-	status = "okay";
+	status = "disabled";
 };
 
 &lpuart2 { /* Dbg console */
@@ -983,11 +993,8 @@
         status = "okay";
 };
 
-&gpu_3d1 {
-        status = "okay";
-};
-
 &imx8_gpu_ss {
+	cores = <&gpu_3d0>;
         status = "okay";
 };
 
@@ -1060,71 +1067,71 @@
 };
 
 &pixel_combiner2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg10 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg11 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg12 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg13 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg14 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg15 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg16 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg17 {
-	status = "okay";
+	status = "disabled";
 };
 
 &prg18 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr3_channel1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr3_channel2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr3_channel3 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr4_channel1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr4_channel2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpr4_channel3 {
-	status = "okay";
+	status = "disabled";
 };
 
 &dpu2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &pciea{
@@ -1135,7 +1142,7 @@
 	reset-gpio = <&gpio4 29 GPIO_ACTIVE_LOW>;
 	clkreq-gpio = <&gpio4 27 GPIO_ACTIVE_LOW>;
 	epdev_on-supply = <&epdev_on>;
-	status = "okay";
+	status = "disabled";
 };
 
 &pd_cm40_intmux {
@@ -1143,7 +1150,7 @@
 };
 
 &intmux_cm40 {
-	status = "okay";
+	status = "disabled";
 };
 
 &pd_cm41_intmux {
@@ -1151,7 +1158,7 @@
 };
 
 &intmux_cm41 {
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_csi_0 {
@@ -1192,15 +1199,43 @@
 	status = "okay";
 };
 
+&gpio0 {
+	status = "disabled";
+};
+
 &gpio1 {
 	status = "okay";
+};
+
+&gpio2 {
+	status = "okay";
+};
+
+&gpio3 {
+	status = "disabled";
+};
+
+&gpio4 {
+	status = "okay";
+};
+
+&gpio5 {
+	status = "okay";
+};
+
+&gpio6 {
+	status = "disabled";
+};
+
+&gpio7 {
+	status = "disabled";
 };
 
 &i2c0_mipi_csi0 {
 	#address-cells = <1>;
 	#size-cells = <0>;
 	clock-frequency = <100000>;
-	status = "okay";
+	status = "disabled";
 
 	max9286_mipi@6A	 {
 		compatible = "maxim,max9286_mipi";
@@ -1226,7 +1261,7 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 	clock-frequency = <100000>;
-	status = "okay";
+	status = "disabled";
 
 	max9286_mipi@6A	 {
 		compatible = "maxim,max9286_mipi";
@@ -1248,41 +1283,46 @@
 	};
 };
 
+&rtc {
+	readonly;
+};
+
 &isi_0 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_3 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_4 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_5 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_6 {
-	status = "okay";
+	status = "disabled";
 };
 
 &isi_7 {
-	status = "okay";
+	status = "disabled";
 };
 
 &sata {
 	pinctrl-0 = <&pinctrl_pciea>;
 	clkreq-gpio = <&gpio4 27 GPIO_ACTIVE_LOW>;
+	/delete-property/ iommus;
 	status = "okay";
 };
 
@@ -1331,11 +1371,11 @@
 };
 
 &ldb2_phy {
-	status = "okay";
+	status = "disabled";
 };
 
 &ldb2 {
-	status = "okay";
+	status = "disabled";
 
 	lvds-channel@0 {
 		fsl,data-mapping = "jeida";
@@ -1358,7 +1398,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lvds1_lpi2c1>;
 	clock-frequency = <100000>;
-	status = "okay";
+	status = "disabled";
 
 	lvds-to-hdmi-bridge@4c {
 		compatible = "ite,it6263";
@@ -1424,7 +1464,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_mipi1_lpi2c0>;
 	clock-frequency = <100000>;
-	status = "okay";
+	status = "disabled";
 
 	adv_bridge2: adv7535@3d {
 		compatible = "adi,adv7535", "adi,adv7533";
@@ -1433,7 +1473,7 @@
 		adi,dsi-channel = <1>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <23 IRQ_TYPE_LEVEL_LOW>;
-		status = "okay";
+		status = "disabled";
 
 		port {
 			adv7535_2_in: endpoint {
@@ -1444,16 +1484,16 @@
 };
 
 &mipi_dsi_phy2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_dsi2 {
 	pwr-delay = <10>;
-	status = "okay";
+	status = "disabled";
 };
 
 &mipi_dsi_bridge2 {
-	status = "okay";
+	status = "disabled";
 
 	port@1 {
 		mipi_dsi_bridge2_adv: endpoint {
@@ -1471,6 +1511,60 @@
 &lvds1_pwm {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lvds1_pwm0>;
+	status = "disabled";
+};
+
+/ {
+	sound-hdmi-tx {
+		compatible = "fsl,imx-audio-cdnhdmi";
+		model = "imx-audio-hdmi-tx";
+		audio-cpu = <&sai_hdmi_tx>;
+		protocol = <1>;
+		hdmi-out;
+	};
+
+	sound-hdmi-arc {
+		compatible = "fsl,imx-audio-spdif";
+		model = "imx-hdmi-arc";
+		spdif-controller = <&spdif1>;
+		spdif-in;
+		spdif-out;
+	};
+};
+
+&irqsteer_hdmi {
+	status = "okay";
+};
+
+&hdmi {
+	compatible = "fsl,imx8qm-hdmi";
+	assigned-clocks = <&clk IMX8QM_HDMI_PXL_SEL>,
+					<&clk IMX8QM_HDMI_PXL_LINK_SEL>,
+					<&clk IMX8QM_HDMI_PXL_MUX_SEL>;
+	assigned-clock-parents = <&clk IMX8QM_HDMI_AV_PLL_CLK>,
+							<&clk IMX8QM_HDMI_AV_PLL_CLK>,
+							<&clk IMX8QM_HDMI_AV_PLL_CLK>;
+	fsl,cec;
+	status = "okay";
+};
+
+&sai_hdmi_tx {
+	assigned-clocks =<&clk IMX8QM_ACM_HDMI_TX_SAI0_MCLK_SEL>,
+			<&clk IMX8QM_AUD_PLL0_DIV>,
+			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_DIV>,
+			<&clk IMX8QM_AUD_ACM_AUD_REC_CLK0_DIV>,
+			<&clk IMX8QM_AUD_SAI_HDMITX0_MCLK>;
+	assigned-clock-parents = <&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_CLK>;
+	assigned-clock-rates = <0>, <786432000>, <49152000>, <12288000>, <49152000>;
+	fsl,sai-asynchronous;
+	status = "okay";
+};
+
+&spdif1 {
+	assigned-clocks =<&clk IMX8QM_AUD_PLL0_DIV>,
+			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_DIV>,
+			<&clk IMX8QM_AUD_ACM_AUD_REC_CLK0_DIV>;
+	assigned-clock-rates = <786432000>, <49152000>, <12288000>;
 	status = "okay";
 };
 
@@ -1501,22 +1595,137 @@
 				cooling-device =
 				<&A53_0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
 			};
-			map1 {
-				trip = <&pmic_alert0>;
-				cooling-device =
-				<&A72_0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
-			};
 		};
 	};
+	/delete-node/ cpu-thermal1;
+};
+
+&edma0 {
+	reg = <0x0 0x5a2c0000 0x0 0x10000>, /* channel12 UART0 rx */
+	      <0x0 0x5a2d0000 0x0 0x10000>, /* channel13 UART0 tx */
+	      <0x0 0x5a2e0000 0x0 0x10000>, /* channel14 UART1 rx */
+	      <0x0 0x5a2f0000 0x0 0x10000>, /* channel15 UART1 tx */
+	      <0x0 0x5a320000 0x0 0x10000>, /* channel18 UART3 rx */
+	      <0x0 0x5a330000 0x0 0x10000>, /* channel19 UART3 tx */
+	      <0x0 0x5a340000 0x0 0x10000>, /* channel20 UART4 rx */
+	      <0x0 0x5a350000 0x0 0x10000>; /* channel21 UART4 tx */
+	dma-channels = <8>;
+	interrupts = <GIC_SPI 434 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 435 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 436 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 437 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 440 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 441 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH>,
+		     <GIC_SPI 443 IRQ_TYPE_LEVEL_HIGH>;
+	interrupt-names = "edma0-chan12-rx", "edma0-chan13-tx",
+			  "edma0-chan14-rx", "edma0-chan15-tx",
+			  "edma0-chan18-rx", "edma0-chan19-tx",
+			  "edma0-chan20-rx", "edma0-chan21-tx";
+};
+
+&edma2 {
+	reg =	<0x0 0x59280000 0x0 0x10000>, /* spdif0 rx */
+		<0x0 0x59290000 0x0 0x10000>; /* spdif0 tx */
+	dma-channels = <2>;
+	interrupts =	<GIC_SPI 457 IRQ_TYPE_LEVEL_HIGH>, /* spdif0 */
+			<GIC_SPI 459 IRQ_TYPE_LEVEL_HIGH>;
+	interrupt-names = "edma2-chan8-rx", "edma2-chan9-tx"; /* spdif0 */
+};
+
+&edma3 {
+	dma-channels = <0>;
+};
+
+&display {
+	ports = <&dpu1_disp0>, <&dpu1_disp1>;
+};
+
+&gic {
+	/delete-property/ interrupts;
+};
+
+&sec_jr1 {
+	status = "disabled";
+};
+
+&sec_jr2 {
+	status = "okay";
+};
+
+&sec_jr3 {
+	status = "disabled";
+};
+
+&usdhc3 {
+	/delete-property/ iommus;
 };
 
 &vpu_decoder {
 	core_type = <2>;
-	status = "okay";
+	status = "disabled";
 };
 
 &vpu_encoder {
-	status = "okay";
+	status = "disabled";
 };
 
-
+/delete-node/ &asrc1;
+/delete-node/ &ddr_pmu0;
+/delete-node/ &ddr_pmu1;
+/delete-node/ &dpu2;
+/delete-node/ &dsp;
+/delete-node/ &esai1;
+/delete-node/ &fec2;
+/delete-node/ &gpio0_mipi_csi0;
+/delete-node/ &gpio0_mipi_csi1;
+/delete-node/ &hdmi_rx;
+/delete-node/ &imx_rpmsg;
+/delete-node/ &irqsteer_hdmi_rx;
+/delete-node/ &i2c0_mipi_csi0;
+/delete-node/ &i2c0_mipi_csi1;
+/delete-node/ &i2c1_lvds1;
+/delete-node/ &i2c0_mipi_dsi1;
+/delete-node/ &irqsteer_dsi1;
+/delete-node/ &irqsteer_csi0;
+/delete-node/ &irqsteer_csi1;
+/delete-node/ &irqsteer_lvds1;
+/delete-node/ &isi_0;
+/delete-node/ &isi_1;
+/delete-node/ &isi_2;
+/delete-node/ &isi_3;
+/delete-node/ &isi_4;
+/delete-node/ &isi_5;
+/delete-node/ &isi_6;
+/delete-node/ &isi_7;
+/delete-node/ &jpegdec;
+/delete-node/ &jpegenc;
+/delete-node/ &ldb2;
+/delete-node/ &ldb2_phy;
+/delete-node/ &lpuart1;
+/delete-node/ &lpuart2;
+/delete-node/ &lpuart4;
+/delete-node/ &lvds_region2;
+/delete-node/ &mipi_csi_0;
+/delete-node/ &mipi_csi_1;
+/delete-node/ &mipi_dsi_bridge2;
+/delete-node/ &mipi_dsi_csr2;
+/delete-node/ &mipi_dsi_phy2;
+/delete-node/ &mipi_dsi2;
+/delete-node/ &mqs;
+/delete-node/ &pd_conn_usbotg0;
+/delete-node/ &pd_isi_ch0;
+/delete-node/ &pixel_combiner2;
+/delete-node/ &sai_hdmi_rx;
+/delete-node/ &sai0;
+/delete-node/ &sai2;
+/delete-node/ &sai3;
+/delete-node/ &smmu;
+/delete-node/ &spdif0;
+/delete-node/ &usbotg1;
+/delete-node/ &usbphy1;
+/delete-node/ &usbh1;
+/delete-node/ &usdhc1;
+/delete-node/ &usbmisc1;
+/delete-node/ &usbmisc2;
+/delete-node/ &usbphynop2;
