--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-a72.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-a72.dtsi
@@ -14,7 +14,6 @@
  */
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
-#include "fsl-imx8-ca53.dtsi"
 #include "fsl-imx8-ca72.dtsi"
 #include <dt-bindings/clock/imx8qm-clock.h>
 #include <dt-bindings/input/input.h>
@@ -32,45 +31,45 @@
 	#size-cells = <2>;
 
 	aliases {
-		csi0 = &mipi_csi_0;
-		csi1 = &mipi_csi_1;
-		dpu0 = &dpu1;
+//		csi0 = &mipi_csi_0;
+//		csi1 = &mipi_csi_1;
+//		dpu0 = &dpu1;
 		dpu1 = &dpu2;
-		ethernet0 = &fec1;
-		ethernet1 = &fec2;
-		dsi_phy0 = &mipi_dsi_phy1;
+//		ethernet0 = &fec1;
+//		ethernet1 = &fec2;
+//		dsi_phy0 = &mipi_dsi_phy1;
 		dsi_phy1 = &mipi_dsi_phy2;
-		mipi_dsi0 = &mipi_dsi1;
+//		mipi_dsi0 = &mipi_dsi1;
 		mipi_dsi1 = &mipi_dsi2;
-		ldb0 = &ldb1;
+//		ldb0 = &ldb1;
 		ldb1 = &ldb2;
-		isi0 = &isi_0;
-		isi1 = &isi_1;
-		isi2 = &isi_2;
-		isi3 = &isi_3;
-		isi4 = &isi_4;
-		isi5 = &isi_5;
-		isi6 = &isi_6;
-		isi7 = &isi_7;
-		serial0 = &lpuart0;
-		serial1 = &lpuart1;
+//		isi0 = &isi_0;
+//		isi1 = &isi_1;
+//		isi2 = &isi_2;
+//		isi3 = &isi_3;
+//		isi4 = &isi_4;
+//		isi5 = &isi_5;
+//		isi6 = &isi_6;
+//		isi7 = &isi_7;
+//		serial0 = &lpuart0;
+//		serial1 = &lpuart1;
 		serial2 = &lpuart2;
-		serial3 = &lpuart3;
-		serial4 = &lpuart4;
+//		serial3 = &lpuart3;
+//		serial4 = &lpuart4;
 		mmc0 = &usdhc1;
-		mmc1 = &usdhc2;
-		mmc2 = &usdhc3;
+//		mmc1 = &usdhc2;
+//		mmc2 = &usdhc3;
 		usbphy0 = &usbphy1;
-		can0 = &flexcan1;
-		can1 = &flexcan2;
-		can2 = &flexcan3;
+//		can0 = &flexcan1;
+//		can1 = &flexcan2;
+//		can2 = &flexcan3;
 		i2c0 = &i2c_rpbus_0;
 		i2c1 = &i2c_rpbus_1;
 	};
 
 	memory@80000000 {
 		device_type = "memory";
-		reg = <0x00000000 0x80000000 0 0x40000000>;
+		reg = <0x00000000 0xc0000000 0 0x40000000>;
 		      /* DRAM space - 1, size : 1 GB DRAM */
 	};
 
@@ -86,38 +85,38 @@
 		 *
 		 */
 
-		decoder_boot: decoder_boot@0x84000000 {
+		decoder_boot: decoder_boot@0xc4000000 {
 			no-map;
-			reg = <0 0x84000000 0 0x2000000>;
+			reg = <0 0xc4000000 0 0x2000000>;
 		};
-		encoder_boot: encoder_boot@0x86000000 {
+		encoder_boot: encoder_boot@0xc6000000 {
 			no-map;
-			reg = <0 0x86000000 0 0x400000>;
+			reg = <0 0xc6000000 0 0x400000>;
 		};
-		rpmsg_reserved: rpmsg@0x90000000 {
+		rpmsg_reserved: rpmsg@0xd0000000 {
 			no-map;
-			reg = <0 0x90000000 0 0x400000>;
+			reg = <0 0xd0000000 0 0x400000>;
 		};
-		rpmsg_dma_reserved:rpmsg_dma@0x90400000 {
+		rpmsg_dma_reserved:rpmsg_dma@0xd0400000 {
 			compatible = "shared-dma-pool";
 			no-map;
-			reg = <0 0x90400000 0 0x1C00000>;
+			reg = <0 0xd0400000 0 0x1C00000>;
 		};
-		decoder_rpc: decoder_rpc@0x92000000 {
+		decoder_rpc: decoder_rpc@0xd2000000 {
 			no-map;
-			reg = <0 0x92000000 0 0x200000>;
+			reg = <0 0xd2000000 0 0x200000>;
 		};
-		encoder_rpc: encoder_rpc@0x92200000 {
+		encoder_rpc: encoder_rpc@0xd2200000 {
 			no-map;
-			reg = <0 0x92200000 0 0x200000>;
+			reg = <0 0xd2200000 0 0x200000>;
 		};
-		dsp_reserved: dsp@0x92400000 {
+		dsp_reserved: dsp@0xd2400000 {
 			no-map;
-			reg = <0 0x92400000 0 0x2000000>;
+			reg = <0 0xd2400000 0 0x2000000>;
 		};
-		encoder_reserved: encoder_reserved@0x94400000 {
+		encoder_reserved: encoder_reserved@0xd4400000 {
 			no-map;
-			reg = <0 0x94400000 0 0x800000>;
+			reg = <0 0xd4400000 0 0x800000>;
 		};
 
 		/* global autoconfigured region for contiguous allocations */
@@ -125,7 +124,7 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			size = <0 0x3c000000>;
-			alloc-ranges = <0 0x96000000 0 0x3c000000>;
+			alloc-ranges = <0 0xd6000000 0 0x3c000000>;
 			linux,cma-default;
 		};
 
@@ -145,12 +144,12 @@
 		interrupt-parent = <&gic>;
 	};
 
-	mu: mu@5d1c0000 {
+	mu: mu@5d1d0000 {
 		compatible = "fsl,imx8-mu";
-		reg = <0x0 0x5d1c0000 0x0 0x10000>;
-		interrupts = <GIC_SPI 177 IRQ_TYPE_LEVEL_HIGH>;
+		reg = <0x0 0x5d1d0000 0x0 0x10000>;
+		interrupts = <GIC_SPI 178 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-parent = <&gic>;
-		fsl,scu_ap_mu_id = <0>;
+		fsl,scu_ap_mu_id = <2>;
 		status = "okay";
 	};
 
@@ -279,6 +278,7 @@
 		#size-cells = <1>;
 		reg = <0 0x52090000 0 0x1000>;
 		ranges = <0 0 0x52090000 0x10000>;
+		status = "disabled";
 
 		pmu@9000 {
 			compatible = "arm,cci-400-pmu,r1",
@@ -294,22 +294,7 @@
 		};
 	};
 
-	#include "fsl-imx8qm-device.dtsi"
-};
-
-&A53_0 {
-	operating-points = <
-		/* kHz    uV */
-		/* voltage is maintained by SCFW, so no need here */
-		1200000	   0
-		1104000	   0
-		900000	   0
-		600000	   0
-	>;
-	clocks = <&clk IMX8QM_A53_DIV>;
-	clock-latency = <61036>;
-	#cooling-cells = <2>;
-	/delete-property/ cpu-idle-states;
+	#include "fsl-imx8qm-device-a72.dtsi"
 };
 
 &A72_0 {
@@ -336,18 +321,6 @@
                700000  0
 /*underdrive*/ 400000  0  /*core/shader clock share the same frequency on underdrive mode*/
        >;
-};
-
-&A53_1 {
-	/delete-property/ cpu-idle-states;
-};
-
-&A53_2 {
-	/delete-property/ cpu-idle-states;
-};
-
-&A53_3 {
-	/delete-property/ cpu-idle-states;
 };
 
 &A72_1 {
