ECOCKPIT-12 GIC: change affinity settings strategy
Instead of setting the same affinity for all interrupts at boot time,
only set it when interrupts are registered.
This way, a cluster will not mess up the other cluster's settings.

ECOCKPIT-241 do not configure GIC Distributor if already done.
When enabling the group1 irq, the distributor is disabled,
which is causing lost irq to other domain already running.

ECOCKPIT-251 GIC: do not disable SPI IRQs when setting their affinity
disabling the IRQ in gic_set_type() may disturb drivers that do not 're-enable' it after.

Signed-off-by: Seb Fagard <sebastien.fagard@nxp.com>

--- a/arch/arm64/configs/ecockpit_defconfig
+++ b/arch/arm64/configs/ecockpit_defconfig
@@ -735,6 +735,7 @@ CONFIG_PWM_MESON=m
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_PWM_SAMSUNG=y
 CONFIG_PWM_TEGRA=m
+CONFIG_GIC_GENTLE_CONFIG=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_SUN4I_USB=y
 CONFIG_PHY_HI6220_USB=y
