--- a/arch/arm64/configs/ecockpit_defconfig
+++ b/arch/arm64/configs/ecockpit_defconfig
@@ -283,6 +283,7 @@ CONFIG_RTL_CARDS=m
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_XEN_NETDEV_BACKEND=m
 CONFIG_IVSHMEM_NET=y
+CONFIG_IMX_SHMEM_NET=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=m
